--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Input Checker</title>
+    <link rel="stylesheet" href="style.css">
     <h1> This page validates if your beginning and end brackets are balanced.</h1>
 </head>
 <body>
-    <div id="text1"><span style="vertical-align:top;position:relative;top:-0px">Enter some text here:</span></div>
-    <input type="text" placeholder="Type data " id="inputId"><br>
+    <input type="text" placeholder="Type data " id="inputId"><br><br>
     <button id="button" onclick="GetData(true)">Check Balance</button><br><br>
-    <div id="bb1"><span style="vertical-align:top;position:relative;top:-0px">( = </span></div>
-    <div id="bb2"><span style="vertical-align:top;position:relative;top:-0px">< = </span></div>
-    <div id="bb3"><span style="vertical-align:top;position:relative;top:-0px">{ = </span></div>
-    <div id="bb4"><span style="vertical-align:top;position:relative;top:-0px">[ = </span></div>
-    <div id="eb1"><span style="vertical-align:top;position:relative;top:-0px">) = </span></div>
-    <div id="eb2"><span style="vertical-align:top;position:relative;top:-0px">> = </span></div>
-    <div id="eb3"><span style="vertical-align:top;position:relative;top:-0px">} = </span></div>
-    <div id="eb4"><span style="vertical-align:top;position:relative;top:-0px">] = </span></div>
+    <div id="bt1"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
+    <div id="bb1"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
+    <div id="eb1"><span style="vertical-align:top;position:relative;top:-0px"></span></div><br>
+    <div id="bt2"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
+    <div id="bb2"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
+    <div id="eb2"><span style="vertical-align:top;position:relative;top:-0px"></span></div><br>
+    <div id="bt3"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
+    <div id="bb3"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
+    <div id="eb3"><span style="vertical-align:top;position:relative;top:-0px"></span></div><br>
+    <div id="bt4"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
+    <div id="bb4"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
+    <div id="eb4"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
     <div id="answer"><span style="vertical-align:top;position:relative;top:-0px"></span></div>
     <script src="app.js"></script>
 </body>
